# prcdmp

./: .gitignore  CMakeLists.txt  README.md  install.sh  pydmp.yml  record.sh  rundmp.sh
PRCDMP/include/: common.h  dmp_test.hpp  interface.h
PRCDMP/include/DMP/: CanonicalSystem.hpp  DMP.hpp  DiscreteDMP.hpp  messages.h
PRCDMP/include/UTILS/: Config.h  common.h  trajectoryUtils.h
PRCDMP/src/: ._main.cpp  CMakeLists.txt  common.cpp  interface.cpp  record.cpp  rundmp.cpp  runtrajectory.cpp
PRCDMP/src/DMP/: CMakeLists.txt  CanonicalSystem.cpp  DMP.cpp  DiscreteDMP.cpp
PRCDMP/src/UTILS/: CMakeLists.txt  Config.cpp  common.cpp  trajectoryUtils.cpp
PRCDMP/test/: CMakeLists.txt  generaltest.cpp
data/set1/conf/: DMP.json  dmpTraj.txt
data/set2/conf/: DMP.json  dataset.json
data/set3/conf/: weights.csv
data/set3/episodes/episode1/: replay.csv
data/set4/conf/: DMP.json  dataset.json
data/set4/episodes/episode0/: recording.csv
data/set4/episodes/episode1/: recording.csv  replay.csv  weights.csv
pydmp/: setup.py
pydmp/examples/: __init__.py  learn_dmp.py
pydmp/pydmps/: cs.py  dmp.py  dmp_discrete.py  dmp_rhythmic.py
pydmp/pydmps.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
pydmp/util/: read_franka_traj.py
